--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head></head>
-    <body></body>
+    <head>
+        <script src="build.js"></script>
+    </head>
+    <body>
+        <script>fouthWallAlert("")</script>
+    </body>
 </html>
